// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> with alternative size 1`] = `
.c0 {
  max-width: 100%;
  margin: 0 auto;
}

@media (min-width:768px) {
  .c0 {
    width: 650px;
  }
}

@media (min-width:960px) {
  .c0 {
    width: 800px;
  }
}

<div
  className="c0"
  size="alternative"
>
  <span>
    Content
  </span>
</div>
`;

exports[`<Container /> with full size 1`] = `
<div
  className=""
  size="full"
>
  <span>
    Content
  </span>
</div>
`;

exports[`<Container /> with initial props 1`] = `
.c0 {
  max-width: 100%;
  margin: 0 auto;
}

@media (min-width:960px) {
  .c0 {
    width: 1220px;
  }
}

<div
  className="c0"
  size="normal"
>
  <span>
    Content
  </span>
</div>
`;

exports[`<Container /> with normal size 1`] = `
.c0 {
  max-width: 100%;
  margin: 0 auto;
}

@media (min-width:960px) {
  .c0 {
    width: 1220px;
  }
}

<div
  className="c0"
  size="normal"
>
  <span>
    Content
  </span>
</div>
`;
